B-F Backup Sandbox 30.4.12/src/objects/Art_Asset__c.object
<CustomObject>
    <description>FDC-Art Collection Database
Created: 10/25/2010 - Mike Shroyer</description>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <description>FDC-Art Collection Database</description>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Art_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Location where the Asset is stored</inlineHelpText>
        <label>Art Location</label>
        <referenceTo>Art_Location__c</referenceTo>
        <relationshipLabel>Art Assets</relationshipLabel>
        <relationshipName>Art_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Select the Artist that created the asset.</inlineHelpText>
        <label>Artist</label>
        <referenceTo>Artist__c</referenceTo>
        <relationshipLabel>Art Assets</relationshipLabel>
        <relationshipName>Art_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>FDC-Art Collection</description>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Art</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Archives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BF_Number__c</fullName>
        <description>FDC-Art Collection Database</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy ID sometimes used for searches</inlineHelpText>
        <label>B-F Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_F_Location__c</fullName>
        <description>Location Field Used for Sorting</description>
        <formula>Art_Location__r.Name &amp; &quot; - &quot; &amp; Floor__c  &amp;  &quot; - &quot; &amp; Office__c</formula>
        <inlineHelpText>Location Field Used for Sorting</inlineHelpText>
        <label>B-F Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Description__c</fullName>
        <description>FDC-Art Collection Database</description>
        <label>Condition Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destroyed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copyright__c</fullName>
        <description>FDC-Art Collection Database</description>
        <label>Copyright</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Purchase price</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depth_in__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Optional - Depth in inches, do not include quotes &quot;</inlineHelpText>
        <label>Depth (in)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>FDC-Art Collection</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset_Number__c</fullName>
        <description>FDC-Art Collection Database</description>
        <externalId>true</externalId>
        <inlineHelpText>Managed by Accounting, this field is used for tracking assets</inlineHelpText>
        <label>Fixed Asset Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Enter the floor where the art asset is located</inlineHelpText>
        <label>Floor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framed__c</fullName>
        <label>Framed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gallery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Gallery that the asset was purchased from</inlineHelpText>
        <label>Gallery</label>
        <referenceTo>Gallery__c</referenceTo>
        <relationshipLabel>Art Assets</relationshipLabel>
        <relationshipName>Art_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height_in__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Height in inches, do not include quotes &quot;</inlineHelpText>
        <label>Height (in)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Value__c</fullName>
        <description>FDC-Art Collection Database</description>
        <label>Insured Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>FDC-Art Collection DB</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to reference original record in source file</inlineHelpText>
        <label>LegacyID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Size__c</fullName>
        <inlineHelpText>original text to indicate size</inlineHelpText>
        <label>Legacy Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_Description__c</fullName>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Enter details about all mediums used to create this art asset</inlineHelpText>
        <label>Medium Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Enter the office/room where the art asset is stored.</inlineHelpText>
        <label>Office</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Medium__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Used for reporting, enter the primary medium used to create this asset</inlineHelpText>
        <label>Primary Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Acrylic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charcoal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gouache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithograph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pencil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photograph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watercolor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchased_From_Details__c</fullName>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Temporary field used to build the Purchased From Gallery or Artist values.</inlineHelpText>
        <label>Purchased From Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_From__c</fullName>
        <description>FDC-Art Collection</description>
        <inlineHelpText>Indicate whether this was purchased from an artist or a gallery</inlineHelpText>
        <label>Purchased From</label>
        <picklist>
            <picklistValues>
                <fullName>Artist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchased_From_f__c</fullName>
        <description>FDC-Art Collection</description>
        <formula>IF( ISPICKVAL( Purchased_From__c,&quot;Artist&quot;) ,  Artist__r.First_Name__c &amp;&quot; &quot;&amp; Artist__r.Last_Name__c ,  Gallery__r.Name )</formula>
        <inlineHelpText>Displays the Artist or Gallery Name</inlineHelpText>
        <label>Purchased From (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_f__c</fullName>
        <description>FDC-Art Collection Database</description>
        <formula>IF(Height_in__c=&quot;&quot;,&quot;&quot;,IF( Depth_in__c = &quot;&quot;,Height_in__c  &amp;&quot;&apos;&apos; x &quot;&amp; Width_in__c&amp;&quot;&apos;&apos;&quot;,Height_in__c&amp;&quot;&apos;&apos; x &quot;&amp; Width_in__c&amp;&quot;&apos;&apos; x &quot;&amp;  Depth_in__c&amp;&quot;&apos;&apos;&quot; ))</formula>
        <inlineHelpText>Calculates the size based on Width, Height and Depth entered.</inlineHelpText>
        <label>Size (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_in__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Width in inches, do not include quotes &quot;</inlineHelpText>
        <label>Width (in)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>FDC-Art Collection</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Art Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Artist__c</columns>
        <columns>Gallery__c</columns>
        <columns>Art_Location__c</columns>
        <columns>B_F_Location__c</columns>
        <columns>Cost__c</columns>
        <columns>Year__c</columns>
        <columns>BF_Number__c</columns>
        <columns>Fixed_Asset_Number__c</columns>
        <columns>Primary_Medium__c</columns>
        <columns>Medium_Description__c</columns>
        <columns>Condition_Description__c</columns>
        <columns>Description__c</columns>
        <columns>Purchased_From_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Missing_Fixed_Asset_Number</fullName>
        <columns>NAME</columns>
        <columns>Art_Location__c</columns>
        <columns>Cost__c</columns>
        <columns>Fixed_Asset_Number__c</columns>
        <columns>Primary_Medium__c</columns>
        <columns>Medium_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fixed_Asset_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Cost__c</field>
            <operation>greaterOrEqual</operation>
            <value>USD 500</value>
        </filters>
        <label>Missing Fixed Asset Number</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Art Asset Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Art Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Select_Gallery_if_Purchased_From_a_Galle</fullName>
        <active>false</active>
        <description>User must select a gallery if they enter that the art asset was purchased from a gallery.</description>
        <errorConditionFormula>AND( ISPICKVAL(Purchased_From__c,&quot;Gallery&quot;) , Gallery__c =NULL)</errorConditionFormula>
        <errorDisplayField>Gallery__c</errorDisplayField>
        <errorMessage>If you select the Purchased From value of &quot;Gallery&quot;, you must enter a Gallery.</errorMessage>
    </validationRules>
</CustomObject>